--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.Holo" >
         <activity
             android:name="de.dhbw.container.ContainerActivity"
             android:label="@string/title_activity_container" >
