--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@android:style/Theme.Holo">
         <activity
             android:name="de.dhbw.container.ContainerActivity"
-            android:label="@string/title_activity_container" >
+            android:label="@string/app_name" >
             <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
