--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,7 +22,7 @@
     
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/runner"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo">
         <activity
