--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,9 +22,9 @@
     
     <application
         android:allowBackup="true"
-        android:icon="@drawable/runner"
+        android:icon="@drawable/ic_app"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Holo">
+        android:theme="@android:style/Theme.Holo" android:logo="@drawable/ic_app">
         <activity
             android:name="de.dhbw.container.ContainerActivity"
             android:label="@string/app_name" >
