--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo" android:logo="@drawable/ic_app">
         <activity
-            android:name="de.dhbw.container.ContainerActivity"
+            android:name="de.dhbw.container.MenuContainerActivity"
             android:label="@string/app_name" >
             <intent-filter>
             <action android:name="android.intent.action.MAIN" />
