--- a/project.properties
+++ b/project.properties
@@ -12,6 +12,6 @@
 
 # Project target.
 target=android-18
-android.library.reference.1=..\\..\\..\\..\\Android IDE\\eclipse\\workspace\\actionbarsherlock
-android.library.reference.2=..\\..\\..\\..\\Android IDE\\eclipse\\workspace\\google_play_services\\libproject\\google-play-services_lib
-android.library.reference.3=../../../../Android IDE/eclipse/workspace/library
+android.library.reference.1=../../android/adt-bundle-linux-x86_64-20130917/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.2=../PagerSlidingTabStrip/library
+android.library.reference.3=../ActionBarSherlock/actionbarsherlock
