--- a/project.properties
+++ b/project.properties
@@ -13,5 +13,5 @@
 # Project target.
 target=android-18
 android.library.reference.3=../../../../Android IDE/eclipse/workspace/library
-android.library.reference.1=../../../../Android IDE/eclipse/workspace/actionbarsherlock
-android.library.reference.2=../../../../Android IDE/eclipse/workspace/google_play_services/libproject/google-play-services_lib
+android.library.reference.1=..\\..\\..\\..\\Android IDE\\sdk\\extras\\google\\google_play_services\\libproject\\google-play-services_lib
+android.library.reference.2=../../../../Android IDE/eclipse/workspace/actionbarsherlock
