--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,7 +28,8 @@
         android:debuggable="true">
         <activity
             android:name="de.dhbw.container.MenuContainerActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
