--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_app"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Holo" android:logo="@drawable/ic_app"
+        android:theme="@style/Theme.Sherlock.Light.DarkActionBar" android:logo="@drawable/ic_app"
         android:debuggable="true">
         <activity
             android:name="de.dhbw.container.MenuContainerActivity"
