--- a/project.properties
+++ b/project.properties
@@ -1,6 +1,6 @@
-android.library.reference.3=../../../../Android IDE/eclipse/workspace/library
-android.library.reference.1=../../../../Android IDE/eclipse/workspace/actionbarsherlock
-android.library.reference.2=../../../../Android IDE/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.3=../PagerSlidingTabStrip/library
+android.library.reference.1=../ActionBarSherlock/actionbarsherlock
+android.library.reference.2=../google-play-services_lib
 
 # Project target.
 target=android-19
