--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,10 +6,7 @@
 
     <uses-sdk
         android:minSdkVersion="11"
-        android:targetSdkVersion="18" />
-    <uses-feature
-        android:glEsVersion="0x00020000"
-        android:required="true"/>
+        android:targetSdkVersion="19" />
     
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -24,8 +21,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_app"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Sherlock.Light.DarkActionBar" android:logo="@drawable/ic_app"
-        android:debuggable="true">
+        android:theme="@style/Theme.Sherlock.Light.DarkActionBar" android:logo="@drawable/ic_app" >
         <activity
             android:name="de.dhbw.container.MenuContainerActivity"
             android:label="@string/app_name"
@@ -35,10 +31,6 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
         </activity>
-        
-     <meta-data
-	    android:name="com.google.android.maps.v2.API_KEY"
-	    android:value="AIzaSyD-_gyQIXxWB5nGZYfRxRXDebzeL4fXpDI"/>
      
     </application>
 
