--- a/project.properties
+++ b/project.properties
@@ -1,5 +1,5 @@
-android.library.reference.1=..\\..\\..\\..\\Android IDE\\eclipse\\workspace\\actionbarsherlock
-android.library.reference.2=../../../../Android IDE/eclipse/workspace/library
+android.library.reference.1=../ActionBarSherlock/actionbarsherlock
+android.library.reference.2=../PagerSlidingTabStrip/library
 
 # Project target.
 target=android-19
